...
    "button.addItem" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Zur Liste hinzufügen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Add to List"
...
    "itemSearch.title" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Artikel suchen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Search Items"
...
